--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang ="en">
+<head>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>project 4</title> 
+<link href="style.css" rel="stylesheet"/>
+</head>
+
+<body>
+<p>hello, my name is sammy bayar, and this is my portfolio page.</p>
+  
+<p> this is my first project, it illustrates life and death, the Night before the Sun, Khaleesi and Khal Drogo</p>
+<p>https://sammybayar.github.io/PROJECT_1_sammybayar/</p> 
+
+<p>the second project, my muse was . This project brought the generational wealth, that I am blessed with, it keeps me going through the day, and it is something that I am proud of.</p>
+
+<p>I made this video right now on the 4th floor of the UIC library, and if any student that goes to UIC, if you know you know.</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/eWiPlF1hEUQ?si=0jXsstbuOSP0PuoE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+<p>this project is my magnum opus, I am proud of this project, my muse for this game, is my fellow classmate Devon. He is a cool guy.</p>
+
+<p>https://twinery.org/2/#/stories/2dc029d4-0e51-43a9-b526-2d1a6e9db914</p>
+
+
+
+
+  
+
+</body>
 
